--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
             .section-tittle img {
                 margin-bottom: 30px;
             }
+            #scrollUp {
+                display: -webkit-box;
+                display: -ms-flexbox;
+                display: flex;
+                -webkit-box-align: center;
+                    -ms-flex-align: center;
+                        align-items: center;
+                text-align: center;
+                -webkit-box-pack: center;
+                    -ms-flex-pack: center;
+                        justify-content: center;
+            }
 		</style>
     </head>
     <body>
@@ -401,63 +413,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="brand-active brand-border">
-                        <div class="single-brand">
-                            <img src="assets/img/service/brand1.jpg" alt="">
-                        </div>
-                        <div class="single-brand">
-                            <img src="assets/img/service/brand2.jpg" alt="">
-                        </div>
-                        <div class="single-brand">
-                            <img src="assets/img/service/brand3.jpg" alt="">
-                        </div>
-                        <div class="single-brand">
-                            <img src="assets/img/service/brand4.jpg" alt="">
-                        </div>
-                        <div class="single-brand">
-                            <img src="assets/img/service/brand5.jpg" alt="">
-                        </div>
-                        <div class="single-brand">
-                            <img src="assets/img/service/brand3.jpg" alt="">
-                        </div>
-                    </div>
                 </div>
-            </section>
-            <div class="gallery-area2 fix">
-                <div class="container-fluid p-0">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="gallery-active owl-carousel">
-                                <div class="gallery-img">
-                                    <a href="#"><img src="assets/img/gallery/gallery01.png" alt=""></a>
-                                </div>
-                                <div class="gallery-img">
-                                    <a href="#"><img src="assets/img/gallery/gallery02.png" alt=""></a>
-                                </div>
-                                <div class="gallery-img">
-                                    <a href="#"><img src="assets/img/gallery/gallery03.png" alt=""></a>
-                                </div>
-                                <div class="gallery-img">
-                                    <a href="#"><img src="assets/img/gallery/gallery04.png" alt=""></a>
-                                </div>
-                                <div class="gallery-img">
-                                    <a href="#"><img src="assets/img/gallery/gallery05.png" alt=""></a>
-                                </div>
-                                <div class="gallery-img">
-                                    <a href="#"><img src="assets/img/gallery/gallery06.png" alt=""></a>
-                                </div>
-                                <div class="gallery-img">
-                                    <a href="#"><img src="assets/img/gallery/gallery07.png" alt=""></a>
-                                </div>
-                                <div class="gallery-img">
-                                    <a href="#"><img src="assets/img/gallery/gallery08.png" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-           
+            </section>          
         </main>
         <footer>
             <div class="footer-main" data-background="assets/img/gallery/section_bg4.png">
@@ -484,22 +441,9 @@
         <script src="./assets/js/bootstrap.min.js"></script>
         <script src="./assets/js/jquery.slicknav.min.js"></script>
         <script src="./assets/js/owl.carousel.min.js"></script>
-        <script src="./assets/js/slick.min.js"></script>
-        <script src="./assets/js/gijgo.min.js"></script>
-        <script src="./assets/js/wow.min.js"></script>
-        <script src="./assets/js/animated.headline.js"></script>
-        <script src="./assets/js/jquery.magnific-popup.js"></script>
         <script src="./assets/js/jquery.scrollUp.min.js"></script>
-        <script src="./assets/js/jquery.nice-select.min.js"></script>
+        <script src="./assets/js/slick.min.js"></script>
         <script src="./assets/js/jquery.sticky.js"></script>
-        <script src="./assets/js/jquery.counterup.min.js"></script>
-        <script src="./assets/js/waypoints.min.js"></script>
-        <script src="./assets/js/contact.js"></script>
-        <script src="./assets/js/jquery.form.js"></script>
-        <script src="./assets/js/jquery.validate.min.js"></script>
-        <script src="./assets/js/mail-script.js"></script>
-        <script src="./assets/js/jquery.ajaxchimp.min.js"></script>
-        <script src="./assets/js/plugins.js"></script>
         <script src="./assets/js/main.js"></script>
 
     </body>
